# deb2snap

./: CMakeLists.txt  Makefile  README.md  deb2snap
src/: CMakeLists.txt  preload.c
tests/: CMakeLists.txt  exec.sh  overlay.sh
tools/: copy-deb  dbus-daemon  dep-tree  fixes  wrapper.in  xmir-run  xmir2-run
